# PowerTools

./: .eslintrc.json  .gitignore  .prettierrc  LICENSE  Makefile  README.md  main.py  main_view.html  package.json  plugin.json  pnpm-lock.yaml  pt_oc.json  rollup.config.js  server.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  feature-request.md  feature-request.yml
assets/: thumbnail.xcf
backend/: Cargo.toml  Cross.toml  Dockerfile  build-docker.sh  build.sh  create_docker_img.sh  entrypoint.sh  run_docker_img.sh
backend/limits_core/: Cargo.toml
backend/limits_core/src/json/: base.rs  battery_limit.rs  conditions.rs  config.rs  cpu_limit.rs  devel_message.rs  gpu_limit.rs  limits.rs  mod.rs  range.rs  target.rs
backend/limits_srv/: Cargo.toml  build_arm64.sh  pt_limits.json
backend/limits_srv/src/: main.rs
backend/src/: api_worker.rs  consts.rs  main.rs  power_worker.rs  resume_worker.rs  save_worker.rs  utility.rs
backend/src/api/: api_types.rs  async_utils.rs  battery.rs  cpu.rs  general.rs  gpu.rs  handler.rs  memory.rs  message.rs  mod.rs  utility.rs
backend/src/persist/: battery.rs  cpu.rs  driver.rs  general.rs  gpu.rs  memory.rs  mod.rs
backend/src/settings/: battery.rs  cpu.rs  driver.rs  error.rs  general.rs  gpu.rs  memory.rs  min_max.rs  mod.rs  traits.rs  util.rs
backend/src/settings/detect/: auto_detect.rs  limits_worker.rs  mod.rs  utility.rs
backend/src/settings/generic/: battery.rs  cpu.rs  gpu.rs  mod.rs  traits.rs
backend/src/settings/generic_amd/: cpu.rs  gpu.rs  mod.rs
backend/src/settings/steam_deck/: battery.rs  cpu.rs  gpu.rs  mod.rs  oc_limits.rs  power_dpm_force.rs  util.rs
backend/src/settings/steam_deck_adv/: cpu.rs  gpu.rs  mod.rs
backend/src/settings/unknown/: battery.rs  cpu.rs  gpu.rs  mod.rs
backend/src/state/: battery.rs  cpu.rs  error.rs  gpu.rs  memory.rs  mod.rs
backend/src/state/generic/: gpu.rs  mod.rs
backend/src/state/steam_deck/: battery.rs  cpu.rs  gpu.rs  mod.rs
defaults/translations/: build.py  es-ES.po  fr-FR.mo  fr-FR.po  test.mo  test.po  zh-CN.mo  zh-CN.po  zh-HK.mo
powertools-rs/: Cargo.toml  build.sh
powertools-rs/src/: consts.rs  main.rs  resume_worker.rs  save_worker.rs  utility.rs
powertools-rs/src/api/: battery.rs  cpu.rs  general.rs  gpu.rs  mod.rs  utility.rs
powertools-rs/src/persist/: cpu.rs  error.rs  general.rs  gpu.rs  mod.rs
powertools-rs/src/settings/: battery.rs  cpu.rs  general.rs  gpu.rs  min_max.rs  mod.rs
powertools-rs/src/state/: mod.rs  traits.rs
src/: Content.tsx  CpuGrid.tsx  ErrorBoundary.tsx  Fields.tsx  backend.ts  constants.ts  consts.ts  index.tsx  initialize.ts  python.ts  types.d.ts  usdpl.ts  usdplBackend.ts  usdplFront.ts
src/components/: battery.tsx  cpus.tsx  debug.tsx  gpu.tsx  message.tsx
src/hooks/: useAsyncReducer.tsx  useBatteryReducer.tsx  useCpuReducer.tsx  useGeneralReducer.tsx  useGpuReducer.tsx  useInterval.tsx
src/usdpl_front/: package.json  rebuild.sh  usdpl_front.d.ts  usdpl_front.js  usdpl_front_bg.wasm  usdpl_front_bg.wasm.d.ts
src/utilities/: assertRequired.ts  augmentedUsdplFront.ts  backendFactory.ts  countCpus.ts  helpers.ts  periodicals.ts  reload.ts  settingsLimits.ts  syncPlebClockToAdvanced.ts  toPercentString.ts
translations/: es-ES.mo  es-ES.po  fr-CA.mo  fr-CA.po  fr-FR.mo  it-IT.mo  it-IT.po  pt.pot  ru-RU.mo  ru-RU.po  test.po  uk-UA.mo  uk-UA.po  zh-CN.po  zh-HK.mo  zh-HK.po  zh_CN.mo  zh_CN.po
