[package]
name = "powertools-rs"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usdpl-back = { version = "0.7.0", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# async
tokio = { version = "*", features = ["time"] }
async-trait = { version = "0.1" }

# logging
log = "0.4"
simplelog = "0.12"

[features]
default = []
decky = ["usdpl-back/decky"]
crankshaft = ["usdpl-back/crankshaft"]
encrypt = ["usdpl-back/encrypt"]

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 4
