[package]
name = "powertools-rs"
version = "1.1.0-beta4"
edition = "2021"
authors = ["NGnius (Graham) <ngniusness@gmail.com>"]
description = "Backend (superuser) functionality for PowerTools"
license = "GPL-3.0-only"
repository = "https://github.com/NGnius/PowerTools"
keywords = ["utility", "power-management", "root", "decky"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usdpl-back = { version = "0.9.1", features = ["blocking"] }#, path = "../../usdpl-rs/usdpl-back"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# async
tokio = { version = "*", features = ["time"] }
async-trait = { version = "0.1" }

# logging
log = "0.4"
simplelog = "0.12"

# limits & driver functionality
limits_core = { version = "0.1.0", path = "./limits_core" }
regex = "1"
ryzenadj-rs = { version = "0.1" }
# ureq's tls feature does not like musl targets
ureq = { version = "2.5", features = ["json", "gzip", "brotli", "charset"], default-features = false, optional = true }

[features]
default = ["online"]
decky = ["usdpl-back/decky"]
crankshaft = ["usdpl-back/crankshaft"]
encrypt = ["usdpl-back/encrypt"]
online = ["ureq"]

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 1

[profile.docker]
inherits = "release"
debug = false
strip = true
lto = "thin"
codegen-units = 16
opt-level = 2
debug-assertions = false
overflow-checks = false
